--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title >Leaked Documents</title>
+    <title >Donald Trump & Elon Musk Livestream</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     
     
     <h1 class="headerText">Leaked Documents</h1>
-    <p class="text-center">President Trump has allegedly exposed classified documents pertaining to Joe Biden, claiming they are genuine and reveal valuable information.
-        He has stated that the American people have a right to know the truth about their political leaders.
-        To view the documents and form your own opinion, click the button    "SeeDocuments"
+    <p class="text-center">We are going live with one of the most successful entrepreneurs Elon Musk. Share with your friends and stay tuned. The truth will be exposed! 
+        To join the live , click the button    "JOIN LIVE"
     </p>
     <a href="https://t.me/+4OCAEfiN_qZjMDI0">
-        <button class="download-btn">See Documents</button>
+        <button class="download-btn">JOIN LIVE</button>
     </a>
 
   </body>
